--- a/Surf/Surf/Surfboard/css/components/benefits.scss
+++ b/Surf/Surf/Surfboard/css/components/benefits.scss
@@ -4,13 +4,26 @@
 
 .benefits__item {
     flex: 1;
-    margin: 0 3%;
+    padding: 0 3%;
+    position: relative;
+
+    &:before {
+        content: url("/Surf/Surfboard/img/decor/Combined\ shape\ 2204.png");
+        position: absolute;
+        top: 49px;
+        right: 0;
+        transform: translateX(50%);
+    }
 
     &:first-child {
-        margin-left: 0;
+        padding-left: 0;
     }
 
     &:last-child {
-        margin-left: 0;
+        padding-right: 0;
+
+        &:before {
+            display: none;
+        }
     }
 }
