--- a/Surf/Surf/Surfboard/css/main.scss
+++ b/Surf/Surf/Surfboard/css/main.scss
@@ -18,3 +18,7 @@ $darkGreen: #0b4d3c;
 @import "components/features";
 @import "components/feature";
 @import "components/btn";
+@import "components/benefits";
+@import "components/headline";
+@import "components/section";
+@import "components/benefit";
