Reviews section added

--- a/Surf/Surf/Surfboard/css/components/hero.scss
+++ b/Surf/Surf/Surfboard/css/components/hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: url("/Surf/Surfboard/img/bg/arnaud-mesureur-17OxKyThYPo-unsplash\ 1.png") center top /cover no-repeat;
+    background: url("../img/bg/arnaud-mesureur-17OxKyThYPo-unsplash\ 1.png") center top /cover no-repeat;
     color: #fff;
 }
 
