--- a/Surf/Surf/Surfboard/css/main.scss
+++ b/Surf/Surf/Surfboard/css/main.scss
@@ -22,3 +22,5 @@ $darkGreen: #0b4d3c;
 @import "components/headline";
 @import "components/section";
 @import "components/benefit";
+@import "components/reviews";
+@import "components/interactive-avatar";
