--- a/Surf/Surf/Surfboard/css/components/reviews.css
+++ b/Surf/Surf/Surfboard/css/components/reviews.css
@@ -25,4 +25,22 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  margin-left: 40px;
+}
+
+.reviews__title {
+  font-size: 27px;
+  font-weight: bold;
+  margin-bottom: 14px;
+  color: #292929;
+}
+
+.reviews__text {
+  margin-bottom: 25px;
+}
+
+.reviews__author {
+  font-size: 18px;
+  font-weight: 500;
+  color: #292929;
 }
