--- a/Surf/Surf/Surfboard/css/main.css
+++ b/Surf/Surf/Surfboard/css/main.css
@@ -82,7 +82,7 @@ section {
 }
 
 .hero {
-  background: url("/Surf/Surfboard/img/bg/arnaud-mesureur-17OxKyThYPo-unsplash 1.png") center top/cover no-repeat;
+  background: url("../img/bg/arnaud-mesureur-17OxKyThYPo-unsplash 1.png") center top/cover no-repeat;
   color: #fff;
 }
 
@@ -262,7 +262,7 @@ section {
 }
 
 .section {
-  height: 69vh;
+  height: 100vh;
   min-height: 650px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -279,7 +279,7 @@ section {
 .section__title {
   font-size: 48px;
   font-weight: bold;
-  margin-bottom: 11px;
+  margin-bottom: 32px;
   text-align: center;
   text-transform: uppercase;
   color: #292929;
@@ -297,7 +297,6 @@ section {
   background: #F2F5F4;
   border-radius: 50%;
   overflow: hidden;
-  margin-bottom: 12px;
 }
 
 .benefit__icon {
@@ -320,4 +319,95 @@ section {
   font-size: 17px;
   font-weight: normal;
   line-height: 1.3;
+}
+
+.reviews__display {
+  background: #F8FAF9;
+  padding: 42px 42px 42px;
+  margin-bottom: 15px;
+}
+
+.reviews__display-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.reviews__avatar {
+  width: 253px;
+  height: 264px;
+}
+
+.reviews__avatar-img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.reviews__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-left: 40px;
+}
+
+.reviews__title {
+  font-size: 27px;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 14px;
+  color: #292929;
+}
+
+.reviews__text {
+  margin-bottom: 25px;
+}
+
+.reviews__author {
+  font-size: 18px;
+  font-weight: bold;
+  color: #292929;
+}
+
+.reviews__switcher {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.reviews__text {
+  line-height: 1.1;
+}
+
+.interactive-avatar {
+  width: 74px;
+  height: 74px;
+  border: 6px solid transparent;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+}
+.interactive-avatar--active {
+  border-color: #FEDB3F;
+}
+
+.interactive-avatar-link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: block;
+}
+
+.interactive-avatar__img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
