--- a/Surf/Surf/Surfboard/css/main.css
+++ b/Surf/Surf/Surfboard/css/main.css
@@ -325,6 +325,21 @@ section {
   background: #F8FAF9;
   padding: 42px 42px 42px;
   margin-bottom: 15px;
+  overflow: hidden;
+  position: relative;
+}
+.reviews__display:before {
+  content: "";
+  display: block;
+  width: 90px;
+  height: 90px;
+  background: #fff;
+  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  top: -65px;
 }
 
 .reviews__display-inner {
@@ -410,4 +425,25 @@ section {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.order-section {
+  background: url("../Surf/Surfboard/img/bg/surf-form.jpg") center top/cover no-repeat;
+  color: #fff;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.form__col {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-right: 20px;
+}
+.form__col:last-child {
+  margin-right: 0;
 }
