--- a/Surf/Surf/Surfboard/css/components/reviews.scss
+++ b/Surf/Surf/Surfboard/css/components/reviews.scss
@@ -2,6 +2,21 @@
     background: #F8FAF9;
     padding: 42px 42px 42px;
     margin-bottom: 15px;
+    overflow: hidden;
+    position: relative;
+
+    &:before {
+        content: "";
+        display: block;
+        width: 90px;
+        height: 90px;
+        background: #fff;
+        border-radius: 50%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        top: -65px;
+    }
 }
 
 .reviews__display-inner {
