--- a/Surf/Surf/Surfboard/css/main.scss
+++ b/Surf/Surf/Surfboard/css/main.scss
@@ -24,3 +24,5 @@ $darkGreen: #0b4d3c;
 @import "components/benefit";
 @import "components/reviews";
 @import "components/interactive-avatar";
+@import "components/order-section";
+@import "components/form";
