--- a/Surf/Surf/Surfboard/css/components/order-section.scss
+++ b/Surf/Surf/Surfboard/css/components/order-section.scss
@@ -1,4 +1,10 @@
 .order-section {
-    background: url("../Surf/Surfboard/img/bg/surf-form.jpg") center top /cover no-repeat;
+    background: url("/Surf/Surfboard/img/bg/jeremy-bishop-cmt3JdS5MC4-unsplash.jpg") center top /cover no-repeat;
+    background-color: #2B2B2B;
+    background-blend-mode: overlay;
+    color: #fff;
+    height: 652px;
+}
+.section__title{
     color: #fff;
 }
